In machine_learning_template.ipynb > EDA section: Update markdown documentation comments throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1679,9 +1679,7 @@
    "metadata": {},
    "source": [
     "## Univariate EDA  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Analyze the distribution of a single column using descriptive statistics and visualizations.\n",
-    "</div>"
+    "Analyze the distribution of a single column using descriptive statistics and visualizations."
    ]
   },
   {
@@ -1690,9 +1688,7 @@
    "metadata": {},
    "source": [
     "### Numerical Columns  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Examine descriptive statistics (e.g., mean, median, standard deviation, quartiles) and visualize the distributions (e.g., histogram) of numerical columns.\n",
-    "</div>"
+    "Examine descriptive statistics and visualize the distributions of numerical columns."
    ]
   },
   {
@@ -1701,7 +1697,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>Descriptive Statistics</strong>\n",
+    "    <strong>Descriptive Statistics</strong> <br>\n",
+    "    📌 Examine descriptive statistics of numerical columns such as the mean, median, standard deviation, and quartiles. \n",
     "</div>"
    ]
   },
@@ -1712,7 +1709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of single numerical column\n",
+    "# Descriptive statistics of a single numerical column\n",
     "X_train[\"numerical_column\"].describe()"
    ]
   },
@@ -1734,7 +1731,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Visualize Distributions</strong> <br> \n",
-    "    📌 Histogram of single numerical column.\n",
+    "    📌 Histogram of a single numerical column.\n",
     "</div>"
    ]
   },
@@ -1763,7 +1760,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Histogram matrix that shows the distribution of all numerical columns. <br>\n",
+    "    📌 Histogram matrix that shows the distribution of all numerical columns. <br><br>\n",
     "    💡 Example code for 6 histograms in a 2x3 matrix.\n",
     "</div>"
    ]
@@ -1804,9 +1801,7 @@
    "metadata": {},
    "source": [
     "### Categorical Columns  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Examine descriptive statistics (e.g., absolute and relative frequencies) and visualize the distributions (e.g., bar plot) of categorical columns.\n",
-    "</div>"
+    "Examine descriptive statistics (absolute and relative frequencies) and visualize the distributions (e.g., bar plots) of categorical columns."
    ]
   },
   {
@@ -1816,7 +1811,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Descriptive Statistics</strong> <br> \n",
-    "    📌 Frequencies of single categorical colum.\n",
+    "    📌 Frequencies of a single categorical column.\n",
     "</div>"
    ]
   },
@@ -1886,7 +1881,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Visualize Distributions</strong> <br> \n",
-    "    📌 Bar plot of single categorical colum.\n",
+    "    📌 Bar plot of a single categorical colum.\n",
     "</div>"
    ]
   },
@@ -1919,7 +1914,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Horizontal bar plot of single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
+    "    📌 Horizontal bar plot of a single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
     "</div>"
    ]
   },
@@ -1960,7 +1955,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix that shows frequencies of all categorical columns. <br>\n",
+    "    📌 Bar plot matrix that shows frequencies of all categorical columns. <br><br>\n",
     "    💡 Example code for 9 bar plots in a 3x3 matrix.\n",
     "</div>"
    ]
@@ -2007,9 +2002,7 @@
    "metadata": {},
    "source": [
     "## Bivariate EDA  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots.\n",
-    "</div>"
+    "Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots."
    ]
   },
   {
@@ -2018,9 +2011,7 @@
    "metadata": {},
    "source": [
     "### Numerical x Numerical  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots. \n",
-    "</div>"
+    "Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots."
    ]
   },
   {
@@ -2155,7 +2146,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Scatter plot matrix that visualizes the relationships between all pairs of numerical columns. <br>\n",
+    "    📌 Scatter plot matrix that visualizes the relationships between all pairs of numerical columns. <br><br>\n",
     "    💡 For example, 6 numerical columns would result in 15 scatter plots in a 5x3 matrix.\n",
     "</div>"
    ]
@@ -2214,9 +2205,7 @@
    "metadata": {},
    "source": [
     "### Numerical x Categorical  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots.\n",
-    "</div>"
+    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots."
    ]
   },
   {
@@ -2226,7 +2215,7 @@
    "source": [
     "#### Group-Wise Statistics \n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Descriptive statistics of a single numerical column grouped by a single categorical column.\n",
+    "    📌 Group-wise statistics of a single numerical column.\n",
     "</div>"
    ]
   },
@@ -2237,7 +2226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of numerical column by categorical column\n",
+    "# Descriptive statistics of a single numerical column grouped by a single categorical column\n",
     "stats_by_category = df_train[\"numerical_column\"].groupby(df[\"categorical_column\"]).describe()\n",
     "stats_by_category"
    ]
@@ -2248,7 +2237,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Descriptive statistics of all numerical columns grouped by a single categorical column. Focus on median, mean, and std for easier readability.\n",
+    "    📌 Group-wise statistics of all numerical columns. Focus on median, mean, and std for easier readability.\n",
     "</div>"
    ]
   },
@@ -2259,6 +2248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Descriptive statistics of all numerical columns grouped by a single categorical column\n",
     "stats_by_category = df_train[numerical_columns].groupby(df_train[\"categorical_column\"]).agg([\"median\", \"mean\", \"std\"]).transpose()\n",
     "stats_by_category"
    ]
@@ -2317,7 +2307,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot of the median of a single numerical column grouped by a single categorical column.\n",
+    "    📌 Bar plot of a single numerical column.\n",
     "</div>"
    ]
   },
@@ -2349,7 +2339,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix that visualizes the relationships between all numerical columns and a single categorical column (e.g., the categorical target variable). <br>\n",
+    "    📌 Bar plot matrix of all numerical columns and a single categorical column (e.g., categorical target variable). <br><br>\n",
     "    💡 Example code for 6 bar plots in a 2x3 matrix.\n",
     "</div>"
    ]
@@ -2390,7 +2380,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix that visualizes the relationships of a single numerical column (e.g., the numerical target variable) and all categorical columns. <br>\n",
+    "    📌 Bar plot matrix of a single numerical column (e.g., numerical target variable) and all categorical columns. <br><br>\n",
     "    💡 Example code for 5 bar plots in a 2x3 matrix.\n",
     "</div> "
    ]
@@ -2431,9 +2421,7 @@
    "metadata": {},
    "source": [
     "### Categorical x Categorical\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots.\n",
-    "</div>"
+    "Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots."
    ]
   },
   {
@@ -2564,7 +2552,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Grouped bar plot matrix that visualizes the relationships between all pairs of categorical columns. <br>\n",
+    "    📌 Grouped bar plot matrix between all pairs of categorical columns. <br><br>\n",
     "    💡 For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix.\n",
     "</div>"
    ]
