In machine_learning_template.ipynb > EDA section: Update markdown documentation comments again

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1688,7 +1688,7 @@
    "metadata": {},
    "source": [
     "### Numerical Columns  \n",
-    "Examine descriptive statistics and visualize the distributions of numerical columns."
+    "Examine descriptive statistics (e.g., mean, median, standard deviation) and visualize the distributions (e.g., histograms) of numerical columns."
    ]
   },
   {
@@ -1698,7 +1698,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Descriptive Statistics</strong> <br>\n",
-    "    📌 Examine descriptive statistics of numerical columns such as the mean, median, standard deviation, and quartiles. \n",
+    "    📌 Examine descriptive statistics of numerical columns. \n",
     "</div>"
    ]
   },
@@ -1760,7 +1760,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Histogram matrix that shows the distribution of all numerical columns. <br><br>\n",
+    "    📌 Histogram matrix of all numerical columns. <br><br>\n",
     "    💡 Example code for 6 histograms in a 2x3 matrix.\n",
     "</div>"
    ]
@@ -2146,7 +2146,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Scatter plot matrix that visualizes the relationships between all pairs of numerical columns. <br><br>\n",
+    "    📌 Scatter plot matrix of all numerical columns. <br><br>\n",
     "    💡 For example, 6 numerical columns would result in 15 scatter plots in a 5x3 matrix.\n",
     "</div>"
    ]
@@ -2307,7 +2307,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot of a single numerical column.\n",
+    "    📌 Bar plot of a single numerical column grouped by a single categorical column.\n",
     "</div>"
    ]
   },
@@ -2339,7 +2339,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix of all numerical columns and a single categorical column (e.g., categorical target variable). <br><br>\n",
+    "    📌 Bar plot matrix of all numerical columns grouped by a single categorical column (e.g., categorical target variable). <br><br>\n",
     "    💡 Example code for 6 bar plots in a 2x3 matrix.\n",
     "</div>"
    ]
@@ -2380,7 +2380,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Bar plot matrix of a single numerical column (e.g., numerical target variable) and all categorical columns. <br><br>\n",
+    "    📌 Bar plot matrix of a single numerical column (e.g., numerical target variable) grouped by all categorical columns. <br><br>\n",
     "    💡 Example code for 5 bar plots in a 2x3 matrix.\n",
     "</div> "
    ]
