--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -600,29 +600,29 @@
    "metadata": {},
    "source": [
     "## Train-Validation-Test Split  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
     "    ℹ️ The ideal split depends on the dataset size and the task. A general guideline is:\n",
     "    <table style=\"margin-left:0; margin-top:15px; border-collapse: collapse;\">\n",
     "        <thead>\n",
     "            <tr>\n",
-    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Dataset Size</th>\n",
-    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Training Set</th>\n",
-    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Validation Set</th>\n",
-    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Test Set</th>\n",
+    "                <th style=\"text-align:left; background-color:#e8f4fd; padding:8px;\">Dataset Size</th>\n",
+    "                <th style=\"text-align:left; background-color:#e8f4fd; padding:8px;\">Training Set</th>\n",
+    "                <th style=\"text-align:left; background-color:#e8f4fd; padding:8px;\">Validation Set</th>\n",
+    "                <th style=\"text-align:left; background-color:#e8f4fd; padding:8px;\">Test Set</th>\n",
     "            </tr>\n",
     "        </thead>\n",
     "        <tbody>\n",
     "            <tr>\n",
-    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">Smaller datasets (<10,000)</td>\n",
-    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">70%</td>\n",
-    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">15%</td>\n",
-    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">15%</td>\n",
+    "                <td style=\"background-color:#e8f4fd; text-align:left; padding:8px;\">Smaller datasets (<10,000)</td>\n",
+    "                <td style=\"background-color:#e8f4fd; text-align:left; padding:8px;\">70%</td>\n",
+    "                <td style=\"background-color:#e8f4fd; text-align:left; padding:8px;\">15%</td>\n",
+    "                <td style=\"background-color:#e8f4fd; text-align:left; padding:8px;\">15%</td>\n",
     "            </tr>\n",
     "            <tr>\n",
-    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">Larger datasets (≥10,000)</td>\n",
-    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">80%</td>\n",
-    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">10%</td>\n",
-    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">10%</td>\n",
+    "                <td style=\"background-color:#d0e7fa; text-align:left; padding:8px;\">Larger datasets (≥10,000)</td>\n",
+    "                <td style=\"background-color:#d0e7fa; text-align:left; padding:8px;\">80%</td>\n",
+    "                <td style=\"background-color:#d0e7fa; text-align:left; padding:8px;\">10%</td>\n",
+    "                <td style=\"background-color:#d0e7fa; text-align:left; padding:8px;\">10%</td>\n",
     "            </tr>\n",
     "        </tbody>\n",
     "    </table>\n",
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9627e76c-0934-4f6e-8059-fc3b25cbbe5b",
+   "id": "6d499010-799d-4bec-9a7a-12e6812dbe17",
    "metadata": {},
    "source": [
     "## Polynomial Features  \n",
@@ -1514,8 +1514,10 @@
     "        </ul>\n",
     "        <li>Retain boolean columns: Pass through boolean columns unchanged using <code>remainder=\"passthrough\"</code>.</li>\n",
     "    </ul>\n",
-    "    ℹ️ Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting.\n",
-    "</div> "
+    "</div> \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting.  \n",
+    "</div>"
    ]
   },
   {
@@ -2610,8 +2612,8 @@
    "metadata": {},
    "source": [
     "# Modeling (Regression Task)  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    ℹ️ For a regression problem, where the goal is to predict a numerical target variable.\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ For a regression problem, where the goal is to predict a numerical target variable. \n",
     "</div>"
    ]
   },
@@ -2621,8 +2623,8 @@
    "metadata": {},
    "source": [
     "## Helper Function for Residual Plots  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    ℹ️ Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically.\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically. \n",
     "</div>"
    ]
   },
@@ -4197,9 +4199,7 @@
    "metadata": {},
    "source": [
     "# Modeling (Classification Task)  \n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    ℹ️ For a classification problem, where the goal is to predict a categorical target variable.\n",
-    "</div>"
+    "ℹ️ For a classification problem, where the goal is to predict a categorical target variable."
    ]
   },
   {
