In machine_learning_template.ipynb > EDA section: Update markdown documentation comments again

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -673,9 +673,7 @@
    "metadata": {},
    "source": [
     "### From Raw Text\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings.\n",
-    "</div>"
+    "Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings."
    ]
   },
   {
@@ -795,9 +793,7 @@
    "metadata": {},
    "source": [
     "### From Categorical Text\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings.\n",
-    "</div>"
+    "Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings."
    ]
   },
   {
@@ -886,9 +882,7 @@
    "metadata": {},
    "source": [
     "## Defining Semantic Type\n",
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning.\n",
-    "</div>"
+    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
    ]
   },
   {
@@ -1004,17 +998,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Imputation</strong> <br>\n",
-    "    📌 Impute missing values in numerical and categorical columns.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87ac79da-4639-4823-9f9f-827cb7b7a1d5",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Impute missing values in a numerical column using the median. \n",
+    "    📌 Impute missing values in a numerical column using the median.\n",
     "</div>"
    ]
   },
@@ -1089,16 +1073,6 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Deletion</strong> <br>\n",
-    "    📌 Delete rows with missing values.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97c2b2cb-2c80-4d1f-b048-4db6de0a7720",
-   "metadata": {},
-   "source": [
-    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Delete rows with missing values on any column.\n",
     "</div>"
    ]
