--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2585,9 +2585,9 @@
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
-    "# Modeling (Regression Task)  \n",
+    "# Modeling (Regression)  \n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    ℹ️ For a regression problem, where the goal is to predict a numerical target variable. \n",
+    "    ℹ️ For a regression problem, where the task is to predict a numerical target variable. \n",
     "</div>"
    ]
   },
@@ -3272,9 +3272,12 @@
    "metadata": {},
    "source": [
     "## Training Baseline Models (Pipeline)  \n",
-    "Train five baseline models:\n",
+    "Train 8 baseline models:\n",
     "- Linear Regression\n",
+    "- Elastic Net Regression\n",
+    "- K-Nearest Neighbors Regressor\n",
     "- Support Vector Regressor\n",
+    "- Decision Tree Regressor\n",
     "- Random Forest Regressor\n",
     "- Multi-Layer Perceptron Regressor\n",
     "- XGBoost Regressor\n",
@@ -3283,6 +3286,33 @@
     "- Root Mean Squared Error (RMSE)\n",
     "- Mean Absolute Percentage Error (MAPE)\n",
     "- R-squared (R2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b85e39-0770-44c4-b67c-85896b0c82ee",
+   "metadata": {},
+   "source": [
+    "## Training Baseline Models (Pipeline)\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Train 8 baseline models:  \n",
+    "    <ul>\n",
+    "        <li>Linear Regression</li>\n",
+    "        <li>Elastic Net Regression</li>\n",
+    "        <li>K-Nearest Neighbors Regressor</li>\n",
+    "        <li>Support Vector Regressor</li>\n",
+    "        <li>Decision Tree Regressor</li>\n",
+    "        <li>Random Forest Regressor</li>\n",
+    "        <li>Multi-Layer Perceptron Regressor</li>\n",
+    "        <li>XGBoost Regressor</li>\n",
+    "    </ul>\n",
+    "    🎯 Model performance will be evaluated using the following metrics:  \n",
+    "    <ul>\n",
+    "        <li>Root Mean Squared Error (RMSE)</li>\n",
+    "        <li>Mean Absolute Percentage Error (MAPE)</li>\n",
+    "        <li>R-squared (R2)</li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
@@ -4280,8 +4310,8 @@
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
-    "# Modeling (Classification Task)  \n",
-    "ℹ️ For a classification problem, where the goal is to predict a categorical target variable."
+    "# Modeling (Classification)  \n",
+    "ℹ️ For a classification problem, where the task is to predict a categorical target variable."
    ]
   },
   {
