In machine_learning_template.ipynb > Modeling (Classification) > Training Baseline Models (Pipeline) section: Update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3268,28 +3268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36172487-5eb6-495b-910e-aafdf0365a13",
-   "metadata": {},
-   "source": [
-    "## Training Baseline Models (Pipeline)  \n",
-    "Train 8 baseline models:\n",
-    "- Linear Regression\n",
-    "- Elastic Net Regression\n",
-    "- K-Nearest Neighbors Regressor\n",
-    "- Support Vector Regressor\n",
-    "- Decision Tree Regressor\n",
-    "- Random Forest Regressor\n",
-    "- Multi-Layer Perceptron Regressor\n",
-    "- XGBoost Regressor\n",
-    "\n",
-    "The model performance will be evaluated using the following metrics:  \n",
-    "- Root Mean Squared Error (RMSE)\n",
-    "- Mean Absolute Percentage Error (MAPE)\n",
-    "- R-squared (R2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "37b85e39-0770-44c4-b67c-85896b0c82ee",
    "metadata": {},
    "source": [
@@ -4856,22 +4834,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6983589-27f9-43d1-a8f3-ea43240fd89f",
+   "id": "ae894ad4-b6fd-49da-813c-933be2653b0d",
    "metadata": {},
    "source": [
-    "## Training Baseline Models (Pipeline)  \n",
-    "Train five baseline models:\n",
-    "- Logistic Regression\n",
-    "- Support Vector Classifier\n",
-    "- Random Forest Classifier\n",
-    "- Multi-Layer Perceptron Classifier\n",
-    "- XGBoost Classifier\n",
-    "\n",
-    "The model performance will be evaluated using the following metrics:  \n",
-    "- Accuracy\n",
-    "- Precision\n",
-    "- Recall\n",
-    "- F1-score"
+    "## Training Baseline Models (Pipeline)\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Train 8 baseline models:  \n",
+    "    <ul>\n",
+    "        <li>Logistic Regression</li>\n",
+    "        <li>Elastic Net Logistic Regression</li>\n",
+    "        <li>K-Nearest Neighbors Classifier</li>\n",
+    "        <li>Support Vector Classifier</li>\n",
+    "        <li>Decision Tree Classifier</li>\n",
+    "        <li>Random Forest Classifier</li>\n",
+    "        <li>Multi-Layer Perceptron Classifier</li>\n",
+    "        <li>XGBoost Classifier</li>\n",
+    "    </ul>\n",
+    "    🎯 Model performance will be evaluated using the following metrics:  \n",
+    "    <ul>\n",
+    "        <li>Accuracy</li>\n",
+    "        <li>Precision</li>\n",
+    "        <li>Recall</li>\n",
+    "        <li>F1-score</li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
