In machine_learning_template.ipynb > Modeling (Regression) > Hyperparameter Tuning section: Update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3366,15 +3366,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4bd7a1-73cd-4c7c-bea6-f0de3b7833d8",
+   "id": "caccfbd5-1687-4cd8-8b6a-df2e146c94d3",
    "metadata": {},
    "source": [
     "## Hyperparameter Tuning  \n",
-    "Based on baseline model training, the following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:\n",
-    "- Model 1 (e.g., Random Forest Regressor)  \n",
-    "  *Justification example*: Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.\n",
-    "- Model 2 (e.g., XGBoost Regressor)  \n",
-    "  *Justification example*: Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
+    "    💡 Example: The following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:  \n",
+    "    <ul>\n",
+    "        <li><b>Random Forest Regressor</b>  \n",
+    "            <br><i>Justification:</i> Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.</li>\n",
+    "        <li><b>XGBoost Regressor</b>  \n",
+    "            <br><i>Justification:</i> Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively.</li>\n",
+    "    </ul>\n",
+    "</div>\n"
    ]
   },
   {
