In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4927,15 +4927,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ccfe859-3f44-4ecb-b975-56e392b352ec",
+   "id": "fe872c0e-d238-4b4f-a946-2d12929e311a",
    "metadata": {},
    "source": [
     "## Hyperparameter Tuning  \n",
-    "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1-score on the validation data and were selected for hyperparameter tuning:\n",
-    "- Model 1 (e.g., Random Forest Classifier)  \n",
-    "  *Justification example*: Demonstrated high recall and F1-score, indicating robust performance across multiple classes and strong handling of imbalanced datasets. \n",
-    "- Model 2 (e.g., XGBoost Classifier)  \n",
-    "  *Justification example*: Consistently high accuracy across classes and strong overall evaluation metric scores, making it a competitive option for fine-tuning."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
+    "    💡 Example: The following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1-score on the validation data and were selected for hyperparameter tuning:  \n",
+    "    <ul>\n",
+    "        <li><b>Random Forest Classifier</b>  \n",
+    "            <br><i>Justification:</i> Demonstrated high recall and F1-score, indicating robust performance across multiple classes and strong handling of imbalanced datasets.</li>\n",
+    "        <li><b>XGBoost Classifier</b>  \n",
+    "            <br><i>Justification:</i> Consistently high accuracy across classes and strong overall evaluation metric scores, making it a competitive option for fine-tuning.</li>\n",
+    "    </ul>\n",
+    "</div>\n"
    ]
   },
   {
