In machine_learning_template.ipynb > Modeling (Regression) > Hyperparameter Tuning section: Implement info boxes for hyperparameters of grid search and randomized search in markdown cells

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3374,33 +3374,44 @@
     "    📌 Based on baseline model training, select the best performing models for hyperparameter tuning. <br><br> \n",
     "    💡 Example: The following models outperformed the other candidates across evaluation metrics (RMSE, MAPE, R-squared) on the validation data and were selected for hyperparameter tuning:  \n",
     "    <ul>\n",
-    "        <li><b>Random Forest Regressor</b>  \n",
+    "        <li><b>Model 1: Random Forest Regressor</b>  \n",
     "            <br><i>Justification:</i> Delivered low RMSE and MAPE scores during baseline evaluation, showing strong predictive performance with minimal error.</li>\n",
-    "        <li><b>XGBoost Regressor</b>  \n",
+    "        <li><b>Model 2: XGBoost Regressor</b>  \n",
     "            <br><i>Justification:</i> Achieved high R-squared and consistently low error metrics, indicating its ability to capture underlying patterns in the data effectively.</li>\n",
     "    </ul>\n",
-    "</div>\n"
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "965309eb-9a30-4f41-ab42-97e3f54680ca",
+   "id": "f2a5167a-77c1-4572-b26e-343a60ac01e9",
    "metadata": {},
    "source": [
     "### Grid Search  \n",
-    "- Core Parameters  \n",
-    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestRegressor`).  \n",
-    "    - `param_grid`: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.  \n",
-    "    - `cv=5`: Number of folds for cross-validation.  \n",
-    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"neg_mean_squared_error\"`, `\"neg_mean_absolute_error\"`, `\"r2\"`).  \n",
-    "- Optional Parameters  \n",
-    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
-    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
-    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
-    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
-    "    - `random_state=None`: Ensures reproducibility of results when estimators or scoring functions involve randomness.  \n",
-    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
-    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
+    "    ℹ️ Hyperparameters:  \n",
+    "    <ul>  \n",
+    "        <li>Core Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>estimator</code>: The machine learning model you want to optimize (e.g., <code>RandomForestRegressor</code>).</li>  \n",
+    "                <li><code>param_grid</code>: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.</li>  \n",
+    "                <li><code>cv=5</code>: Number of folds for cross-validation.</li>  \n",
+    "                <li><code>scoring=None</code>: The metric to evaluate model performance (e.g., <code>\"neg_mean_squared_error\"</code>, <code>\"neg_mean_absolute_error\"</code>, <code>\"r2\"</code>).</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "        <li>Optional Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>verbose=0</code>: Controls the verbosity of the output. Higher values provide more detailed logs.</li>  \n",
+    "                <li><code>n_jobs=None</code>: Number of jobs to run in parallel. <code>-1</code> uses all available CPU cores.</li>  \n",
+    "                <li><code>pre_dispatch=\"2*n_jobs\"</code>: Controls the number of jobs that get dispatched during parallel execution.</li>  \n",
+    "                <li><code>refit=True</code>: If <code>True</code>, the estimator is refit on the entire training set using the best parameters.</li>  \n",
+    "                <li><code>random_state=None</code>: Ensures reproducibility of results when estimators or scoring functions involve randomness.</li>  \n",
+    "                <li><code>error_score=np.nan</code>: Value to assign to the score if a parameter combination results in a failure.</li>  \n",
+    "                <li><code>return_train_score=False</code>: If <code>True</code>, training scores will be returned along with validation scores.</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "    </ul>  \n",
+    "</div>  \n"
    ]
   },
   {
@@ -3409,7 +3420,7 @@
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "Example: Random Forest Regressor\n",
+    "💡 Example: Random Forest Regressor\n",
     "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
@@ -3485,7 +3496,7 @@
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "Example: XGBoost Regressor  \n",
+    "💡 Example: XGBoost Regressor  \n",
     "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
@@ -3563,24 +3574,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a93171-470c-484f-b754-ac268f7d71a4",
+   "id": "52c22068-57b1-4207-b8b2-2e414ed051ef",
    "metadata": {},
    "source": [
-    "### Randomized Search\n",
-    "- Core Parameters\n",
-    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestRegressor`).  \n",
-    "    - `param_distributions`: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.  \n",
-    "    - `n_iter=10`: The number of random combinations to sample from the parameter grid.  \n",
-    "    - `cv=5`: Number of folds for cross-validation.  \n",
-    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"neg_mean_squared_error\"`, `\"neg_mean_absolute_error\"`, `\"r2\"`).\n",
-    "- Optional Parameters\n",
-    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
-    "    - `random_state=None`: Ensures reproducibility of results.  \n",
-    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
-    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
-    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
-    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
-    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
+    "### Randomized Search  \n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">  \n",
+    "    ℹ️ Hyperparameters:  \n",
+    "    <ul>  \n",
+    "        <li>Core Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>estimator</code>: The machine learning model you want to optimize (e.g., <code>RandomForestRegressor</code>).</li>  \n",
+    "                <li><code>param_distributions</code>: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.</li>  \n",
+    "                <li><code>n_iter=10</code>: The number of random combinations to sample from the parameter grid.</li>  \n",
+    "                <li><code>cv=5</code>: Number of folds for cross-validation.</li>  \n",
+    "                <li><code>scoring=None</code>: The metric to evaluate model performance (e.g., <code>\"neg_mean_squared_error\"</code>, <code>\"neg_mean_absolute_error\"</code>, <code>\"r2\"</code>).</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "        <li>Optional Parameters:  \n",
+    "            <ul>  \n",
+    "                <li><code>verbose=0</code>: Controls the verbosity of the output. Higher values provide more detailed logs.</li>  \n",
+    "                <li><code>random_state=None</code>: Ensures reproducibility of results.</li>  \n",
+    "                <li><code>n_jobs=None</code>: Number of jobs to run in parallel. <code>-1</code> uses all available CPU cores.</li>  \n",
+    "                <li><code>pre_dispatch=\"2*n_jobs\"</code>: Controls the number of jobs that get dispatched during parallel execution.</li>  \n",
+    "                <li><code>refit=True</code>: If <code>True</code>, the estimator is refit on the entire training set using the best parameters.</li>  \n",
+    "                <li><code>error_score=np.nan</code>: Value to assign to the score if a parameter combination results in a failure.</li>  \n",
+    "                <li><code>return_train_score=False</code>: If <code>True</code>, training scores will be returned along with validation scores.</li>  \n",
+    "            </ul>  \n",
+    "        </li>  \n",
+    "    </ul>  \n",
+    "</div>  \n"
    ]
   },
   {
@@ -3600,7 +3622,7 @@
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "Example: Random Forest Regressor\n",
+    "💡 Example: Random Forest Regressor\n",
     "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
@@ -3678,7 +3700,7 @@
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "Example: XGBoost Regressor  \n",
+    "💡 Example: XGBoost Regressor  \n",
     "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
@@ -4948,13 +4970,14 @@
    "id": "3100fcfa-df5b-459a-b2ff-aff36ee95ca3",
    "metadata": {},
    "source": [
-    "### Grid Search  \n",
-    "- Core Parameters  \n",
+    "### Grid Search \n",
+    "ℹ️ Hyperparameters: \n",
+    "- Core Parameters:\n",
     "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
     "    - `param_grid`: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.  \n",
     "    - `cv=5`: Number of folds for cross-validation.  \n",
     "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"precision\"`, `\"recall\"`, `\"f1\"`, `\"roc_auc\"`).  \n",
-    "- Optional Parameters  \n",
+    "- Optional Parameters:  \n",
     "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
     "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
     "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
@@ -5128,13 +5151,14 @@
    "metadata": {},
    "source": [
     "### Randomized Search\n",
-    "- Core Parameters\n",
+    "ℹ️ Hyperparameters: \n",
+    "- Core Parameters:\n",
     "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
     "    - `param_distributions`: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.  \n",
     "    - `n_iter=10`: The number of random combinations to sample from the parameter grid.  \n",
     "    - `cv=5`: Number of folds for cross-validation.  \n",
     "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"precision\"`, `\"recall\"`, `\"f1\"`, `\"roc_auc\"`).  \n",
-    "- Optional Parameters\n",
+    "- Optional Parameters:\n",
     "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
     "    - `random_state=None`: Ensures reproducibility of results.  \n",
     "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
